<!--
  - Copyright 2019 Michael Moessner
  -
  - This file is part of Metronome.
  -
  - Metronome is free software: you can redistribute it and/or modify
  - it under the terms of the GNU General Public License as published by
  - the Free Software Foundation, either version 3 of the License, or
  - (at your option) any later version.
  -
  - Metronome is distributed in the hope that it will be useful,
  - but WITHOUT ANY WARRANTY; without even the implied warranty of
  - MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  - GNU General Public License for more details.
  -
  - You should have received a copy of the GNU General Public License
  - along with Metronome.  If not, see <http://www.gnu.org/licenses/>.
-->

<resources>
    <string name="app_name">Metronome</string>
    <string name="action_settings">Settings</string>

    <string name="base" translatable="false">kick drum</string>
    <string name="hihat" translatable="false">hi-hat</string>
    <string name="snare" translatable="false">snare</string>
    <string name="sticks" translatable="false">sticks</string>
    <string name="claves" translatable="false">claves</string>
    <string name="woodblock" translatable="false">woodblock</string>
    <string name="mute">mute</string>
    <string name="bpm">%s bpm</string>
    <string name="eqbpm">= %s bpm</string>

    <string name="scenes">Scenes</string>
    <string name="save_scene">Save scene</string>
    <string name="load_from_disc">Load scenes from file</string>
    <string name="save_to_disc">Save scenes to file</string>
    <string name="clear_all">Clear all</string>
    <string name="clear_all_question">Delete all scenes?</string>
    <string name="title">Title</string>
    <string name="done">Done</string>
    <string name="appearance">Appearance</string>
    <string name="dark_appearance">Dark appearance</string>
    <string name="light_appearance">Light appearance</string>
    <string name="system_appearance">Appearance follows system settings</string>

    <string name="dark_appearance_short">Dark</string>
    <string name="light_appearance_short">Light</string>
    <string name="system_appearance_short">Auto</string>

    <string name="add_note">Add note</string>

    <string name="speed_sensitivity">Speed changing sensitivity</string>
    <string name="speed_sensitivity_summary">Speed steps per cm: %.1f</string>
    <string name="speedincrement">Speed increment</string>
    <string name="minimum_bpm">Minimum speed</string>
    <string name="maximum_bpm">Maximum speed</string>

    <string name="reset_all_settings">Reset all settings</string>
    <string name="reset_settings_prompt">Do you really want to reset all settings?</string>
    <string name="about">About</string>

    <string name="undo">Undo</string>
    <string name="scene_deleted">Scene deleted</string>

    <string name="save_settings_dialog_title">Save scene</string>
    <string name="save_name">Name</string>
    <string name="saved_scene_message">Saved scene: %s</string>
    <string name="save">Save</string>
    <string name="dismiss">Dismiss</string>
    <string name="max_allowed_characters">Maximum character number: %d</string>
    <plurals name="load_scenes">
        <item quantity="one">Loading %d scene</item>
        <item quantity="other">Loading %d scenes</item>
    </plurals>
    <string name="abort">Abort</string>
    <string name="replace_current_list">Replace current list</string>
    <string name="prepend_current_list">Prepend to current list</string>
    <string name="append_current_list">Append to current list</string>
    <string name="file_empty">File is empty: %s</string>
    <string name="file_invalid">Invalid file: %s</string>
    <string name="file_incomplete">File \"%s\" ends unexpectedly but %d scenes successfully read.</string>
    <string name="database_empty">There are no scenes which can be saved.</string>

    <string name="cannot_delete_last_note">You cannot delete the last note.</string>
    
    <string name="no_scenes">Currently no saved scenes.</string>

    <string name="tap_in">TAP IN</string>

    <string name="about_message">Metronome app\nVersion: %s\nLicense: GPLv3</string>

    <string name="yes">yes</string>
    <string name="no">no</string>

    <string name="saved_speed_too_small">Saved speed %s bpm is smaller than the minimum speed %s bpm.\n</string>
    <string name="saved_speed_too_large">Saved speed %s bpm is larger than the maximum speed %s bpm.\n</string>
    <string name="max_speed_lower_minimum">Given maximum speed (%s) is lower than minimum speed (%s).</string>
    <string name="min_speed_higher_maximum">Given minimum speed (%s) is higher than maximum speed (%s).</string>
    <string name="inconsistent_saved_increment">Saved speed %s bpm cannot be resolved by the current speed increment %s bpm.\n</string>
    <string name="inconsistent_load_title">Inconsistent load</string>
    <string name="inconsistent_summary">\nChange your settings if you want to load the scene correctly.</string>
    <string name="acknowledged">Acknowledged</string>

    <string name="keep_screen_on">Keep screen on</string>
    <string name="vibrate_notes">Vibrating notes</string>
    <string name="not_supported_by_hardware">Not supported by hardware</string>
    <string name="vibrate_strength">Vibration strength</string>
    <string name="low_strength">Low vibration strength (%.2f)</string>
    <string name="medium_strength">Medium vibration strength (%.2f)</string>
    <string name="high_strength">High vibration strength (%.2f)</string>
    <string name="all_notes_deleted">All notes deleted.</string>
    <string name="set_new_speed">Set new speed</string>
    <string name="invalid_speed">"Invalid speed: "</string>
    <string name="speed_too_small">Given speed (%s bpm) smaller than minimum speed (%s bpm).</string>
    <string name="speed_too_large">Given speed (%s bpm) larger than maximum speed (%s bpm).</string>
    <string name="inconsistent_increment">Given speed (%s bpm) cannot be resolved by current increment (%s bpm).</string>
    <string name="vibrate_delay">Vibration delay</string>
    <string name="milliseconds">%d ms</string>
    <string name="database_saved">Writing scenes to \"%s\".</string>
    <string name="play_pause">play and pause</string>
    <string name="edit">Edit</string>
    <string name="editing_scene">Editing scene</string>
    <string name="rename_scene">Rename</string>
    <string name="scene">Scene: %s</string>
    <string name="failed_to_archive_scenes">Failed to store scenes to file.</string>
    <string name="share">Share scenes</string>
    <plurals name="sharing_num_scenes">
        <item quantity="one">Sharing %d scene</item>
        <item quantity="other">Sharing %d scenes</item>
    </plurals>
    <string name="no_scenes_for_sharing">There are no scenes, which can be shared.</string>
    <string name="max_speed_larger_than_allowed">Given maximum speed (%s) must be smaller than %s.</string>
    <string name="delete_note">Delete note</string>
    <string name="tickvisualization">Tick visualization style</string>
    <string name="tickvis_bounce">Bounce</string>
    <string name="thickvis_fade">Fade</string>
    <string name="thickvis_leftright">Alternate</string>
    <string name="decorate_with_hash_number">%d. %s</string>
    <string name="compact_scenes_layout">Compact scenes layout</string>
    <string name="no_scenes_selected">No scenes selected.</string>
    <string name="select_scenes">Select scenes</string>
    <string name="share2">Share</string>
    <string name="select_all">Select all</string>
    <string name="bpm_nonumber">bpm</string>
    <string name="ticking_circle">Animated circle area</string>
    <string name="vibration">Vibration</string>
    <string name="speed_selection">Speed selection</string>
    <string name="visualization">Visualization</string>
    <string name="basic">Basic</string>
    <string name="others">Others</string>
    <string name="visual_delay">Delay visual effects</string>
</resources>
