<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_archive"
        android:orderInCategory="96"
        android:title="@string/save_to_disc"
        android:icon="@drawable/ic_archive"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_unarchive"
        android:orderInCategory="97"
        android:title="@string/load_from_disc"
        android:icon="@drawable/ic_unarchive"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_share"
        android:orderInCategory="95"
        android:title="@string/share"
        android:icon="@drawable/ic_share"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_clear_all"
        android:orderInCategory="94"
        android:title="@string/clear_all"
        android:icon="@drawable/ic_clear_all"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_edit"
        android:orderInCategory="93"
        android:title="@string/edit"
        android:icon="@drawable/ic_edit"
        app:showAsAction="ifRoom"
        />

</menu>